Fixed Social Size
Sometimes social media thinks it is more important than it actually is. Fixed the social media icons from taking up too much space in the footer on mobile.

--- a/style/main.css
+++ b/style/main.css
@@ -133,6 +133,7 @@ hr{
 .social{
     padding: 0;
     margin:-5px;
+    max-height:70px;
 }
 
 /* Main Page Motion Graphic Animation Murtaugh */
